@@ -1,7 +1,6 @@
 # This file is part of Coog. The COPYRIGHT file at the top level of
 # this repository contains the full copyright notices and license terms.
 from trytond.pool import Pool
-import test_case
 import party
 import invoice
 import report_engine
@@ -11,13 +10,13 @@ import payment_term
 import wizard
 import event
 import period
+import load_data
 
 
 def register():
     Pool.register(
         invoice.InvoiceLine,
         invoice.Invoice,
-        test_case.TestCaseModel,
         party.Party,
         party.PartyAccount,
         report_engine.ReportTemplate,
@@ -34,4 +33,5 @@ def register():
 
     Pool.register(
         wizard.ChangePaymentTerm,
+        load_data.FiscalYearSetWizard,
         module='account_invoice_cog', type_='wizard')
