@@ -1,3 +1,4 @@
+* BUG#7118 Surcharge de l'assistant de mise à jour des périodes fiscales afin de supporter les sequences de quittancement
 * BUG#6930 Remplacer le contexte de transaction par un contexte de serveur lors de l'initialisation de _payment_term_change
 * BUG#6709 Restoration de la méthode get_invoice_sequence sur les périodes
 * FEA#6453 Ajout de la gestion des filtres sur les quittances pour les rapports
